--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -12,8 +12,8 @@
 }
 
 .wrapper {
-  margin-top: 100px;
-  scroll-margin-top: 80px;
+  margin-top: 56px;
+  scroll-margin-top: 60px;
 }
 
 .formation-line {
@@ -28,10 +28,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: row-reverse;
-  width: 3px;
+  width: 1.5px;
   height: 100%;
   margin: 0 30px 0 30px;
-  background-color: azure;
+  background-color: #757575;
 }
 
 .formation-icon-dot, .formation-icon-dot-shadow {
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #373740ff;
+  background: rgb(148, 148, 162);
   border-radius: 50%;
 }
 
@@ -99,15 +99,33 @@
 .about-profile {
   justify-self: end; 
   margin-right: 5%;
-  margin-top: 20px;
+  margin-top: 60px;
   margin-left: 10%;
 }
 
   .about-text {
-    grid-area: a;
     align-self: center;
     justify-self: center;
     text-align: justify;
     margin-right: 10%;
+    margin-top: 60px;
     text-justify: inter-word;
+  }
+
+  @media (max-width: 700px) {
+    .about-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+    .about-profile {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .about-text {
+      margin: auto 20px;
+    }
+
+    .formation-line {
+      grid-template-columns: 1fr 2fr;
+    }
   }
