--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 ﻿/* Global attributes */
 
+* {
+  scroll-behavior: smooth;
+}
+
 body{
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 18px;
   margin: 0;
   padding: 0;
-  margin: auto auto;
+  background-color: rgb(33,37,41);
+  color: rgb(248,249,250);
 }
 
 .title {
@@ -16,6 +21,43 @@ body{
 .wrapper {
   margin-top: 56px;
   scroll-margin-top: 60px;
+}
+
+/* Navbar Section */
+
+.navbar {
+  position: fixed;
+  display: flex;
+  top: 0;
+  width: 100%;
+  justify-content: center;
+  background-color: rgb(33,37,41);
+  z-index: 10;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 56px;
+  background-color: rgb(33,37,41);
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  background-color: #111;
 }
 
 /* About Section */
@@ -38,6 +80,11 @@ body{
   margin-right: 5%;
   margin-top: 60px;
   margin-left: 10%;
+}
+
+.about-profile img {
+  border-radius: 50%;
+  border: 3px solid #dee2e6;
 }
 
 .about-text {
@@ -111,33 +158,49 @@ body{
   background-color: #373740ff;
   margin-top: 10px;
   text-align: center;
+  border-radius: 5%;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.card-subtitle {
+  color: #6c757d;
+  margin: 0.25rem;
+  font-size: 1rem;
+}
+
+.card-text {
+  margin-bottom: 0.5rem;
 }
 
 
 /* Contact Section */
 
-  .social-btn:hover, .git-btn:hover {
-    background: linear-gradient(to bottom, #007bff, #42d392);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.social-btn:hover, .git-btn:hover {
+  background: linear-gradient(to bottom, #007bff, #42d392);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+
+@media (max-width: 700px) {
+  .about-wrapper {
+    display: flex;
+    flex-direction: column;
   }
-  
-
-
-  @media (max-width: 700px) {
-    .about-wrapper {
-      display: flex;
-      flex-direction: column;
-    }
-    .about-profile {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .about-text {
-      margin: auto 20px;
-    }
-
-    .formation-line {
-      grid-template-columns: 1fr 2fr;
-    }
+  .about-profile {
+    margin-left: auto;
+    margin-right: auto;
   }
+  .about-text {
+    margin: auto 20px;
+  }
+
+  .formation-line {
+    grid-template-columns: 1fr 2fr;
+  }
+}
